# CG-course-project

./: .gitignore  CMakeLists.txt  README.md  anim.py  build.sh  run.sh
scenes/1_animation/: 1.json  anim.py
scenes/1_location/: 1.json
scenes/1_shadows/: 1.json
scenes/2_animation/: 1.json
scenes/2_reflection/: 1.json
scenes/3_refraction/: 1.json
scenes/4_anti-aliasing/: 1.json
scenes/5_fixed_texture/: 1.json
scenes/6_rotated_texture/: 1.json
scenes/7_competition/: 1.json
scenes/8_animation/: 1.json
scenes/other/: earth_moon.json  mirrored_sphere.json  refracted_spheres.json
src/: hit.h  image.cpp  image.h  light.h  main.cpp  material.h  object.h  objloader.cpp  objloader.h  quaternion.cpp  quaternion.h  ray.h  raytracer.cpp  raytracer.h  scene.cpp  scene.h  triple.cpp  triple.h  vertex.h
src/json/: json.h  json_fwd.h
src/lode/: lodepng.cpp  lodepng.h
src/shapes/: .cpp  mesh.cpp  mesh.h  quad.cpp  quad.h  solvers.cpp  solvers.h  sphere.h  triangle.cpp  triangle.h  wobbly.cpp  wobbly.h
